--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/runtime-corejs2": "^7.5.0",
+    "axios": "^0.21.1",
     "core-js": "^3.1.4",
     "element-ui": "^2.15.0",
     "vue": "^2.6.10",
