--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@babel/runtime-corejs2": "^7.5.0",
     "axios": "^0.21.1",
     "core-js": "^3.1.4",
+    "echarts": "^5.0.2",
     "element-ui": "^2.15.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
